# monoco-toolkit

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  QWEN.md  README.md  README_ZH.md  TREE.md  cloc_extensions.json  cloc_extensions_clean.json  cloc_issues.json  cloc_monoco.json  cloc_report.json  cloc_specific.json  cloc_tests.json  cloc_vscode_logic.json  cloc_vscode_true_logic.json  debug_import.py  debug_issue.py  lint_output.txt  lint_output_final.txt  lint_report.json  mkdocs.yml  monoco.spec  monoco.yaml  output.json  pyproject.toml  reproduce_spans.py  sitemap.xml  test_feat_0173.py  test_feat_0174.py  test_feat_0175.py  the way of communication with agent and  other smart guy.md
.agents/: last-word-design.md
.monoco/: config.yaml  project.yaml  state.json  workspace.yaml
.obsidian/: workspace.json
ADRs/: ADR-003-Mailbox-Protocol-Schema.md
Archaeology/: REPORT_2026_01_08_2026_01_26.md  REPORT_2026_01_26_01_30.md  REPORT_2026_01_31_02_01.md
Kanban/: EPIC_PREMIUM_COCKPIT.md  POC_PLAN.md  package-lock.json  package.json
Memo/: cli_comparison_codex_kimi_gemini.md
Memos/: 2026-02-05_Discussion_Backup.md  2026-02-06_Mailbox_Protocol_Draft.md  2026-02-06_Monoco_Daemon_Architecture_Evaluation.md  2026-02-06_OpenAI_Frontier_Analysis.md  2026-02-09_Agent_Harness_Spectrum.md  agent-scheduler-architecture-assessment.md  architect-trigger-issue-analysis.md  architecture-layer-analysis.md  archive.md  daemon-architecture-proposals-assessment.md  inbox.md
(+1472 files in other folders)
