[project]
name = "monoco-toolkit"
version = "0.1.0"
description = "Agent Native Toolkit for Monoco"
authors = [
    { name = "Monoco Team", email = "dev@monoco.io" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "prompt-toolkit>=3.0.0"
]
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
monoco = "monoco.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monoco"]
